--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="your-stylesheet-link-here.css" rel="stylesheet" type="text/css">
+    <link href="styles/main.css" rel="stylesheet" type="text/css">
     <title>Andrew Hird</title>
   </head>
+  <header><h1>Hello!</h1></header>
   <body>
     <p>
       Kia ora ao mārama Welcome to my page!
