--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
   <header><h1>Hello!</h1></header>
   <body>
-    <p>
-      Kia ora ao mārama Welcome to my page!
-    </p>
+    <p>Kia ora ao mārama. Welcome to my page!</p>
+  
+<a href="blog/c1-reflection-blog.html">Reflection #1</a>
 
   </body>
 </html>
