completed time and habit blog

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <header><h1>Hello!</h1></header>
   <body>
     <p>Kia ora ao mārama. Welcome to my page!</p>
-  
+
 <a href="blog/c1-reflection-blog.html">Reflection #1</a>
+<a href="blog/c1-time-and-habits-blog.html">Reflection #2</a>
 
   </body>
 </html>
