--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <p>Kia ora ao mārama. Welcome to my page!</p>
 
-<a href="blog/c1-reflection-blog.html">Reflection #1</a>
+<a href="blog/c1-reflection-blog.html">Reflection #1</a> <br>
 <a href="blog/c1-time-and-habits-blog.html">Reflection #2</a>
 
   </body>
