linked blogs to home page

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <p>Kia ora ao mārama. Welcome to my page!</p>
 
-<a href="blog/c1-reflection-blog.html">Reflection #1</a> <br>
-<a href="blog/c1-time-and-habits-blog.html">Reflection #2</a>
+<a href="blog/c1-reflection-blog.html">Blog #1: <em>Reflection</em></a> <br>
+<a href="blog/c1-time-and-habits-blog.html">Blog #2: <em>Time and habbits</em></a>
 
   </body>
 </html>
