added some css values

--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
   </head>
   <header><h1>Hello!</h1></header>
   <body>
-    <p>Kia ora ao mārama. Welcome to my page!</p>
+    <p>Kia ora ao mārama. Click the links below to read my blog posts.</p>
 
+<div class="blog">
+  <center>
 <a href="blog/c1-reflection-blog.html">Blog #1: <em>Reflection</em></a> <br>
 <a href="blog/c1-time-and-habits-blog.html">Blog #2: <em>Time and habbits</em></a>
+  </center>
+</div>
 
   </body>
 </html>
