--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="styles/main.css" rel="stylesheet" type="text/css">
     <title>Andrew Hird</title>
   </head>
-  <header><h1>Hello!</h1></header>
+  <header><h1>Andrew Hird's Blog</h1></header>
   <body>
     <p>Kia ora ao mārama. Click the links below to read my blog posts.</p>
 
