improved CSS and added images

--- a/index.html
+++ b/index.html
@@ -5,16 +5,21 @@
     <link href="styles/main.css" rel="stylesheet" type="text/css">
     <title>Andrew Hird</title>
   </head>
-  <header><h1>Andrew Hird's Blog</h1></header>
-  <body>
-    <p>Kia ora ao mārama. Click the links below to read my blog posts.</p>
+  <header><h1>Andrew Hird's Blog</h1></header><br>
 
-<div class="blog">
-  <center>
-<a href="blog/c1-reflection-blog.html">Blog #1: <em>Reflection</em></a> <br>
-<a href="blog/c1-time-and-habits-blog.html">Blog #2: <em>Time and habbits</em></a>
-  </center>
-</div>
+  <body>
+    <p>Kia ora ao mārama. Click the links below to read my blog posts.</p><br>
+
+    <div>
+          <img class="img-circular" src="images/andrew.jpg">
+    </div><br>
+
+    <div class="blog-nav">
+      <center>
+    <a href="blog/c1-reflection-blog.html">Blog #1: <em>Reflection</em></a> <br>
+    <a href="blog/c1-time-and-habits-blog.html">Blog #2: <em>Time and habbits</em></a>
+      </center>
+    </div>
 
   </body>
 </html>
