changed directory name

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>Kia ora ao mārama. Click the links below to read my blog posts.</p><br>
 
     <div>
-          <img class="img-circular" src="images/andrew.jpg">
+          <img class="img-circular" src="pictures/andrew.jpg">
     </div><br>
 
     <div class="blog-nav">
