attempt at html fix

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>Kia ora ao mārama. Click the links below to read my blog posts.</p><br>
 
 
-          <img class="img-circular" src="pictures/andrew.jpg" alt=""><br>
+          <img class="img-circular" src="images/andrew1.jpg" alt=""><br>
 
       <center>
     <a href="blog/c1-reflection-blog.html">Blog #1: <em>Reflection</em></a> <br>
