re-added blog-nav class

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
 
           <img class="img-circular" src="images/andrew1.jpg" alt=""><br>
 
+<div class="blog-nav"
       <center>
     <a href="blog/c1-reflection-blog.html">Blog #1: <em>Reflection</em></a> <br>
     <a href="blog/c1-time-and-habits-blog.html">Blog #2: <em>Time and habbits</em></a>
       </center>
+</div>
 
   </body>
 </html>
