link t2 blog to index

--- a/index.html
+++ b/index.html
@@ -5,19 +5,16 @@
     <link href="styles/main.css" rel="stylesheet" type="text/css">
     <title>Andrew Hird</title>
   </head>
-  <header><h1>Andrew Hird's Blog</h1></header><br>
-
   <body>
+    <header><h1>Andrew Hird's Blog</h1></header><br>
     <p>Kia ora ao mārama. Click the links below to read my blog posts.</p><br>
 
-
           <img class="img-circular" src="images/andrew1.jpg" alt=""><br>
-
-<div class="blog-nav"
-      <center>
+          
+<div class="blog-nav">
     <a href="blog/c1-reflection-blog.html">Blog #1: <em>Reflection</em></a> <br>
-    <a href="blog/c1-time-and-habits-blog.html">Blog #2: <em>Time and habbits</em></a>
-      </center>
+    <a href="blog/c1-time-and-habits-blog.html">Blog #2: <em>Time and habbits</em></a><br>
+    <a href="blog/t2-html-css-dom-p1.html">Technical Blog: <em>Part 1</em></a>
 </div>
 
   </body>
