--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
   </head>
   <body>
     <header><h1>Andrew Hird's Blog</h1></header><br>
-    <p>Kia ora ao mārama. Click the links below to read my blog posts.</p><br>
+      <p>
+        Kia ora ao mārama. Click the links below to read my blog posts.
+      </p><br>
 
-          <img class="img-circular" src="images/andrew1.jpg" alt=""><br>
+      <img class="img-circular" src="images/andrew1.jpg" alt=""><br>
 
-<div class="blog-nav">
-    <a href="blog/c1-reflection-blog.html">Blog #1: <em>Reflection</em></a> <br>
-    <a href="blog/c1-time-and-habits-blog.html">Blog #2: <em>Time and habbits</em></a><br>
-    <a href="blog/t2-html-css-dom-p1.html">Technical Blog: <em>Part 1</em></a><br>
-    <a href="blog/t2-html-css-dom-p2.html">Technical Blog: <em>Part 2</em></a>
-</div>
+    <div class="blog-nav">
+        <a href="blog/c1-reflection-blog.html">Cultural Blog: <em>Reflection</em></a> <br>
+        <a href="blog/c1-time-and-habits-blog.html">Cultural Blog: <em>Time and habbits</em></a><br>
+        <a href="blog/t2-html-css-dom-p1.html">Technical Blog: <em>Part 1</em></a><br>
+        <a href="blog/t2-html-css-dom-p2.html">Technical Blog: <em>Part 2</em></a><br>
+        <a href="blog/c2-emotional-intelligence.html">Cultural Blog: <em>Emotional Intelligence</em></a>
+    </div>
 
   </body>
 </html>
