--- a/index.html
+++ b/index.html
@@ -5,8 +5,36 @@
     <link href="styles/main.css" rel="stylesheet" type="text/css">
     <title>Andrew Hird</title>
   </head>
+
+  <header>
+    <h1>Andrew Hird's Blog</h1><br>
+  </header>
+
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li><br>
+      <li class="dropdown">
+        <a href="#" class="dropbtn">Cultural Blogs</a>
+        <div class="dropdown-content">
+        <a href="blog/c1-reflection-blog.html">EDA Reflection</em></a>
+        <a href="blog/c1-time-and-habits-blog.html">Time and Habits</a>
+        <a href="blog/c2-emotional-intelligence.html">Emotional Intelligence</a>
+        </li>
+        </div>
+    <li class="dropdown">
+      <a href="#" class="dropbtn">Technical Blogs</a>
+      <div class="dropdown-content">
+      <a href="blog/t2-html-css-dom-p1.html">Technical Blog Part: 1</a>
+      <a href="blog/t2-html-css-dom-p2.html">Technical Blog Part: 2</a>
+      </div>
+    </li>
+    </ul>
+  </nav><br>
+
+
+
   <body>
-    <header><h1>Andrew Hird's Blog</h1></header><br>
+
       <p>
         Kia ora ao mārama. Click the links below to read my blog posts.
       </p><br>
