reduce to skeleton html

--- a/index.html
+++ b/index.html
@@ -1,53 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <link href="styles/main.css" rel="stylesheet" type="text/css">
-    <title>Andrew Hird</title>
+    <title></title>
+    <meta charset="UTF-8">
+
   </head>
-
-  <header>
-    <h1>Andrew Hird's Blog</h1><br>
-  </header>
-
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li class="dropdown">
-        <a href="#" class="dropbtn">Cultural Blogs</a>
-        <div class="dropdown-content">
-        <a href="blog/c1-reflection-blog.html">EDA Reflection</em></a>
-        <a href="blog/c1-time-and-habits-blog.html">Time and Habits</a>
-        <a href="blog/c2-emotional-intelligence.html">Emotional Intelligence</a>
-        </li>
-        </div>
-    <li class="dropdown">
-      <a href="#" class="dropbtn">Technical Blogs</a>
-      <div class="dropdown-content">
-      <a href="blog/t2-html-css-dom-p1.html">Technical Blog Part: 1</a>
-      <a href="blog/t2-html-css-dom-p2.html">Technical Blog Part: 2</a>
-      </div>
-    </li>
-    </ul>
-  </nav><br>
-
-
-
   <body>
-
-      <p>
-        Kia ora ao mārama. Click the links below to read my blog posts.
-      </p><br>
-
-      <img class="img-circular" src="images/andrew1.jpg" alt=""><br>
-
-    <div class="blog-nav">
-        <a href="blog/c1-reflection-blog.html">Cultural Blog: <em>Reflection</em></a> <br>
-        <a href="blog/c1-time-and-habits-blog.html">Cultural Blog: <em>Time and habbits</em></a><br>
-        <a href="blog/t2-html-css-dom-p1.html">Technical Blog: <em>Part 1</em></a><br>
-        <a href="blog/t2-html-css-dom-p2.html">Technical Blog: <em>Part 2</em></a><br>
-        <a href="blog/c2-emotional-intelligence.html">Cultural Blog: <em>Emotional Intelligence</em></a>
-    </div>
 
   </body>
 </html>
