--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Andrew Hird</title>
     <meta charset="UTF-8">
-
+    <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
+    <nav>
+      NAVIGATION
+    </nav>
+
+    <header>
+      <h1>HEADER</h1>
+    </header>
+
+    <h2>Welcome Message</h2>
+
+    <img src="http://placekitten.com/200/300" alt="">
+
+    <section>
+      <h3>Latest Blog Post</h3>
+        <p>
+          Blog Post
+        </p>
+    </section>
+
+    <footer>
+      Quick Links
+    </footer>
 
   </body>
 </html>
