--- a/index.html
+++ b/index.html
@@ -9,7 +9,43 @@
   </head>
   <body>
     <nav>
-      NAVIGATION
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#">About Me</a></li>
+
+
+        <li class="dropdown">
+          <a href="#" class="dropbtn">Blogs</a>
+          <div class="dropdown-content">
+
+            <a href="#">Cultural Blogs</a>
+              <ul class="blogdrop">
+                <a href="blog/c1-reflection-blog.html">EDA Reflection</em></a>
+                <a href="blog/c1-time-and-habits-blog.html">Time and Habits</a>
+                <a href="blog/c2-emotional-intelligence.html">Emotional Intelligence</a>
+              </ul>
+
+            <a href="#">Technical Blogs</a>
+              <ul class="blogdrop">
+                <a href="blog/t2-html-css-dom-p1.html">Technical Blog Part: 1</a>
+                <a href="blog/t2-html-css-dom-p2.html">Technical Blog Part: 2</a>
+              </ul>
+
+          </div>
+
+
+
+
+
+
+
+
+
+
+
+
+      <li><a href="#">Contact Me</a></li>
+      </ul>
     </nav>
 
     <header>
