media query css

--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
 
             <a href="#">Cultural Blogs</a>
               <ul class="blogdrop">
+                <div class="blogdrop-content">
                 <a href="blog/c1-reflection-blog.html">EDA Reflection</em></a>
                 <a href="blog/c1-time-and-habits-blog.html">Time and Habits</a>
                 <a href="blog/c2-emotional-intelligence.html">Emotional Intelligence</a>
+                </div>
               </ul>
+
 
             <a href="#">Technical Blogs</a>
               <ul class="blogdrop">
