--- a/index.html
+++ b/index.html
@@ -8,66 +8,61 @@
     <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#">About Me</a></li>
+    <nav class="container">
+      <div class="row">
+        <div class="twelve columns">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">About Me</a></li>
 
+            <li class="dropdown">
+              <a href="#" class="dropbtn">Blogs</a>
+              <div class="dropdown-content">
 
-        <li class="dropdown">
-          <a href="#" class="dropbtn">Blogs</a>
-          <div class="dropdown-content">
+                <a href="#">Cultural Blogs</a>
+                  <ul class="blogdrop">
+                    <div class="blogdrop-content">
+                    <a href="blog/c1-reflection-blog.html">EDA Reflection</em></a>
+                    <a href="blog/c1-time-and-habits-blog.html">Time and Habits</a>
+                    <a href="blog/c2-emotional-intelligence.html">Emotional Intelligence</a>
+                    </div>
+                  </ul>
 
-            <a href="#">Cultural Blogs</a>
-              <ul class="blogdrop">
-                <div class="blogdrop-content">
-                <a href="blog/c1-reflection-blog.html">EDA Reflection</em></a>
-                <a href="blog/c1-time-and-habits-blog.html">Time and Habits</a>
-                <a href="blog/c2-emotional-intelligence.html">Emotional Intelligence</a>
-                </div>
-              </ul>
+                <a href="#">Technical Blogs</a>
+                  <ul class="blogdrop">
+                    <a href="blog/t2-html-css-dom-p1.html">Technical Blog Part: 1</a>
+                    <a href="blog/t2-html-css-dom-p2.html">Technical Blog Part: 2</a>
+                  </ul>
 
+              </div>
 
-            <a href="#">Technical Blogs</a>
-              <ul class="blogdrop">
-                <a href="blog/t2-html-css-dom-p1.html">Technical Blog Part: 1</a>
-                <a href="blog/t2-html-css-dom-p2.html">Technical Blog Part: 2</a>
-              </ul>
-
+              <li><a href="#">Contact Me</a></li>
+            </ul>
           </div>
-
-
-
-
-
-
-
-
-
-
-
-
-      <li><a href="#">Contact Me</a></li>
-      </ul>
+        </div>
     </nav>
 
-    <header>
-      <h1>HEADER</h1>
+    <header class="container">
+          <h1>HEADER</h1>
     </header>
 
-    <h2>Welcome Message</h2>
+      <div class="container">
+        <h2>Welcome Message</h2>
+      </div>
 
-    <img src="http://placekitten.com/200/300" alt="">
+      <div class="container">
+        <img src="http://placekitten.com/200/300" alt="">
+      </div>
 
-    <section>
-      <h3>Latest Blog Post</h3>
-        <p>
-          Blog Post
-        </p>
-    </section>
+      <div class="container">
+        <h3>Latest Blog Post</h3>
+          <p>
+            Blog Post
+          </p>
+        </div>
 
-    <footer>
-      Quick Links
+    <footer class="container">
+      <a href="#">Quick Links</a>
     </footer>
 
   </body>
