--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
     <link rel="stylesheet" href="styles/main.css">
   </head>
-  <body>
-    <nav class="container">
-      <div class="row">
-        <div class="twelve columns">
+  <body class="container">
+    <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="#">About Me</a></li>
@@ -40,29 +38,28 @@
               <li><a href="#">Contact Me</a></li>
             </ul>
           </div>
-        </div>
     </nav>
 
-    <header class="container">
+    <header>
           <h1>HEADER</h1>
     </header>
 
-      <div class="container">
+      <div>
         <h2>Welcome Message</h2>
       </div>
 
-      <div class="container">
+      <div>
         <img src="http://placekitten.com/200/300" alt="">
       </div>
 
-      <div class="container">
+      <div>
         <h3>Latest Blog Post</h3>
           <p>
             Blog Post
           </p>
         </div>
 
-    <footer class="container">
+    <footer>
       <a href="#">Quick Links</a>
     </footer>
 
