--- a/index.html
+++ b/index.html
@@ -64,23 +64,21 @@
         <h4>Latest Blog Posts</h4>
           <div class="row">
 
-          <div class="one-third column">
-            <h5>S.I.Y. #1</h5>
-              <p>
-                The learnings I took from chapter one is that through emotional intelligence you can learn to control your emotions to better focus yourself and let yourself decide what you want to do with that emotion before it fully arises.<br>
-                <a class="button" href="blog/c2-emotional-intelligence.html">More</a>
-              </p><br>
-          </div>
+            <div class="one-third column">
+              <h5>S.I.Y. #1</h5>
+                <p class="recent1">
+                  The learnings I took from chapter one is that through emotional intelligence you can learn to control your emotions to better focus yourself and let yourself decide what you want to do with that emotion before it fully arises.<br>
+                  <a class="button" href="blog/c2-emotional-intelligence.html">More</a>
+                </p>
+            </div>
 
-        <div class="blog-hide-550">
-        <div class="blog-hide-1000">
+          <div class="blog-hide-550">
           <div class="one-third column">
             <h5>Technical Blog Part 1</h5>
             <p>
               A good way to look at what HTML CSS and the DOM is to use the house analogy. HTML can be seen as the structure of the website and is like the different parts of a house. For example a webpage in HTML is split up into different sections, just as a house is split into different rooms, HTML organises these sections. <br>
               <a class="button" href="blog/t2-html-css-dom-p1.html">More</a>
             </p>
-          </div>
           </div>
 
           <div class="one-third column">
@@ -89,9 +87,14 @@
                 <em>Grid based design</em> is breaking the layout of the page into different boxes. By doing this it is really easy to layout the page and work out what is going to go where and how to do it. A page might not always look like it is sitting on a grid, but if you break it down and draw boxes round the sections, you'll soon see that it is.<br>
                 <a class="button" href="blog/t2-html-css-dom-p2.html">More</a>
               </p>
+          </div>
+          </div>
         </div>
-      </div>
-    </div>
+  </section>
+
+  <section class="blog-hide-1000">
+    <h4>Play this game!</h4>
+    <iframe src="http://funhtml5games.com?embed=pacman" style="width:800px;height:490px;border:none;" frameborder="0" scrolling="no"></iframe>
   </section>
 
 
