--- a/index.html
+++ b/index.html
@@ -1,105 +1,94 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>Andrew Hird</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
     <link rel="stylesheet" href="styles/main.css">
-  </head>
-  <body class="container">
+</head>
+
+<body class="container">
     <nav>
-          <ul>
+        <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">About Me</a></li>
-
-            <li class="dropdown">
-              <a href="#" class="dropbtn">Blogs</a>
-              <div class="dropdown-content">
-
-                <a href="#">Cultural Blogs</a>
-                  <ul class="blogdrop">
-                    <a href="blog/c1-reflection-blog.html">EDA Reflection</em></a>
-                    <a href="blog/c1-time-and-habits-blog.html">Time and Habits</a>
-                    <a href="blog/c2-emotional-intelligence.html">Emotional Intelligence</a>
-                  </ul>
-
-                <a href="#">Technical Blogs</a>
-                  <ul class="blogdrop">
-                    <a href="blog/t2-html-css-dom-p1.html">Technical Blog Part: 1</a>
-                    <a href="blog/t2-html-css-dom-p2.html">Technical Blog Part: 2</a>
-                  </ul>
-
-              </div>
-            </ul>
-          </div>
+            <li><a href="blogs.html">Blogs</a></li>
+            <li><a href="contact-me.html">Contact Me</a></li>
+        </ul>
+        </div>
     </nav>
 
     <header>
-      <div class="row">
-        <div class="two columns">
-          <img src="images/ah-comic.png" alt="logo" height="75" width="75">
+        <div class="row">
+            <div class="two columns">
+                <img src="images/ah-comic.png" alt="logo" height="75" width="75">
+            </div>
+            <div class="ten columns">
+                <h1>Andrew Hird</h1>
+                <h6>Web Developer to be</h6>
+            </div>
         </div>
-        <div class="ten columns">
-          <h1>Andrew Hird</h1>
-            <h6>Web Developer to be</h6>
-        </div>
-
-
-      </div>
     </header>
 
-      <div class="welcome">
+    <div>
         <h3>Hello and Welcome!</h3>
-        <p>
-          Here you can find my thoughts and work from EDA.
-        </p>
-      </div>
+    </div>
 
-      <div>
-        <img class="img-circular" src="images/andrew1.jpg" alt=""><br>
-      </div>
+    <div class="row">
+        <img class="img-circular three columns" src="images/andrew1.jpg" alt="">
+        <br>
+        <p class="one-third column">
+            Hello my name is Andrew Hird, on this website you can find what I have learned at Enspiral Dec Academy so far. Feel free to click about and read some of my blog posts.
+        </p>
+    </div>
 
     <section class="blog-recent">
         <h4>Latest Blog Posts</h4>
-          <div class="row">
+        <div class="row">
 
             <div class="one-third column">
-              <h5>S.I.Y. #1</h5>
+                <h5>S.I.Y. #1</h5>
                 <p class="recent1">
-                  The learnings I took from chapter one is that through emotional intelligence you can learn to control your emotions to better focus yourself and let yourself decide what you want to do with that emotion before it fully arises.<br>
-                  <a class="button" href="blog/c2-emotional-intelligence.html">More</a>
+                    The learnings I took from chapter one is that through emotional intelligence you can learn to control your emotions to better focus yourself and let yourself decide what you want to do with that emotion before it fully arises.
+                    <br>
+                    <a class="button" href="blog/c2-emotional-intelligence.html">More</a>
                 </p>
             </div>
 
-          <div class="blog-hide-550">
-          <div class="one-third column">
-            <h5>Technical Blog Part 1</h5>
-            <p>
-              A good way to look at what HTML CSS and the DOM is to use the house analogy. HTML can be seen as the structure of the website and is like the different parts of a house. For example a webpage in HTML is split up into different sections, just as a house is split into different rooms, HTML organises these sections. <br>
-              <a class="button" href="blog/t2-html-css-dom-p1.html">More</a>
-            </p>
-          </div>
+            <div class="blog-hide-550">
+                <div class="one-third column">
+                    <h5>Technical Blog Part 1</h5>
+                    <p>
+                        A good way to look at what HTML CSS and the DOM is to use the house analogy. HTML can be seen as the structure of the website and is like the different parts of a house. For example a webpage in HTML is split up into different sections, just as a house
+                        is split into different rooms, HTML organises these sections.
+                        <br>
+                        <a class="button" href="blog/t2-html-css-dom-p1.html">More</a>
+                    </p>
+                </div>
 
-          <div class="one-third column">
-            <h5>Technical Blog Part 2</h5>
-              <p>
-                <em>Grid based design</em> is breaking the layout of the page into different boxes. By doing this it is really easy to layout the page and work out what is going to go where and how to do it. A page might not always look like it is sitting on a grid, but if you break it down and draw boxes round the sections, you'll soon see that it is.<br>
-                <a class="button" href="blog/t2-html-css-dom-p2.html">More</a>
-              </p>
-          </div>
-          </div>
+                <div class="one-third column">
+                    <h5>Technical Blog Part 2</h5>
+                    <p>
+                        <em>Grid based design</em> is breaking the layout of the page into different boxes. By doing this it is really easy to layout the page and work out what is going to go where and how to do it. A page might not always look like it
+                        is sitting on a grid, but if you break it down and draw boxes round the sections, you'll soon see that it is.
+                        <br>
+                        <a class="button" href="blog/t2-html-css-dom-p2.html">More</a>
+                    </p>
+                </div>
+            </div>
         </div>
-  </section>
+    </section>
 
 
 
     <footer>
-      <p>
-        © Andrew Hird 2016
-      </p>
+        <p>
+            © Andrew Hird 2016
+        </p>
     </footer>
 
-  </body>
+</body>
+
 </html>
