added technical blog 3

--- a/blogs.html
+++ b/blogs.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
     <link rel="stylesheet" href="styles/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 
 <body class="container">
@@ -59,6 +60,10 @@
 
                 <a class="box" href="blog/t2-html-css-dom-p2.html">
                     <div class="blog-link-text">Technical Blog Part 2</div>
+                </a>
+
+                <a class="box" href="blog/t3-design-to-web-blog.html">
+                    <div class="blog-link-text">Technical Blog: Design to Web</div>
                 </a>
 
             </div>
