--- a/blogs.html
+++ b/blogs.html
@@ -66,6 +66,10 @@
                     <div class="blog-link-text">Technical Blog: Design to Web</div>
                 </a>
 
+                <a class="box" href="blog/c3-meditation-process.html">
+                    <div class="blog-link-text">Meditation Process</div>
+                </a>
+
             </div>
         </div>
 
