--- a/blogs.html
+++ b/blogs.html
@@ -43,31 +43,35 @@
             <div class="blog-link-flex">
 
                 <a class="box" href="blog/c1-reflection-blog.html">
-                    <div class="blog-link-text">Cultural Reflection</div>
+                    <div class="blog-link-text"><h6>Cultural Blog</h6>Cultural Reflection</div>
                 </a>
 
                 <a class="box" href="blog/c1-time-and-habits-blog.html">
-                    <div class="blog-link-text">Time and Habits</div>
+                    <div class="blog-link-text"><h6>Cultural Blog</h6>Time and Habits</div>
                 </a>
 
                 <a class="box" href="blog/c2-emotional-intelligence.html">
-                    <div class="blog-link-text">S.I.Y. Chapter One</div>
+                    <div class="blog-link-text"><h6>Cultural Blog</h6>Emotional Int.</div>
                 </a>
 
                 <a class="box" href="blog/t2-html-css-dom-p1.html">
-                    <div class="blog-link-text">Technical Blog Part 1</div>
+                    <div class="blog-link-text">
+                        <h6>Technical Blog</h6>HTML CSS & The DOM p2</div>
                 </a>
 
                 <a class="box" href="blog/t2-html-css-dom-p2.html">
-                    <div class="blog-link-text">Technical Blog Part 2</div>
+                    <div class="blog-link-text">
+                        <h6>Technical Blog</h6>HTML CSS & The DOM p1</div>
                 </a>
 
                 <a class="box" href="blog/t3-design-to-web-blog.html">
-                    <div class="blog-link-text">Technical Blog: Design to Web</div>
+                    <div class="blog-link-text">
+                        <h6>Technical Blog</h6>Design to Web</div>
                 </a>
 
                 <a class="box" href="blog/c3-meditation-process.html">
-                    <div class="blog-link-text">Meditation Process</div>
+                    <div class="blog-link-text">
+                        <h6>Cultural Blog</h6><h6></h6>Meditation Process</div>
                 </a>
 
             </div>
