--- a/blogs.html
+++ b/blogs.html
@@ -33,10 +33,6 @@
         </div>
     </header>
 
-
-
-
-
     <div class="row">
         <div class="nine columns blog">
             <h3>Blogs</h3>
@@ -74,6 +70,11 @@
                         <h6>Cultural Blog</h6><h6></h6>Meditation Process</div>
                 </a>
 
+                <a class="box" href="blog/t4-javascript-basics.html">
+                    <div class="blog-link-text">
+                        <h6>Technical Blog</h6><h6></h6>Javascript Basics</div>
+                </a>
+
             </div>
         </div>
 
@@ -89,10 +90,6 @@
             </div>
         </aside>
     </div>
-
-
-
-
 
     <footer>
         <p>
