--- a/blogs.html
+++ b/blogs.html
@@ -67,12 +67,17 @@
 
                 <a class="box" href="blog/c3-meditation-process.html">
                     <div class="blog-link-text">
-                        <h6>Cultural Blog</h6><h6></h6>Meditation Process</div>
+                        <h6>Cultural Blog</h6>Meditation Process</div>
                 </a>
 
                 <a class="box" href="blog/t4-javascript-basics.html">
                     <div class="blog-link-text">
-                        <h6>Technical Blog</h6><h6></h6>Javascript Basics</div>
+                        <h6>Technical Blog</h6>Javascript Basics</div>
+                </a>
+
+                <a class="box" href="blog/c4-daily-mindfulness.html">
+                    <div class="blog-link-text">
+                        <h6>Cultural Blog</h6>Daily Mindfulness</div>
                 </a>
 
             </div>
