--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
 
     <section class="blog-recent">
-        <h4>Latest Blog Posts</h4>
+        <h4>Recent Blog Posts</h4>
         <div class="row">
 
             <div class="one-third column">
