--- a/blogs.html
+++ b/blogs.html
@@ -81,6 +81,13 @@
                         <h6>Cultural Blog</h6>Daily Mindfulness</div>
                 </a>
 
+                <a class="box" href="blog/t5-problem-solving.html">
+                    <div class="blog-link-text">
+                        <h6>Technical Blog</h6>Problem Solving</div>
+                </a>
+
+
+
             </div>
         </div>
 
