updated blog index with c5

--- a/blogs.html
+++ b/blogs.html
@@ -86,6 +86,11 @@
                         <h6>Technical Blog</h6>Problem Solving</div>
                 </a>
 
+                <a class="box" href="blog/c5-self-confidence.html">
+                    <div class="blog-link-text">
+                        <h6>Cultural Blog</h6>Self Confidence</div>
+                </a>
+
 
 
             </div>
