--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <img class="img-circular three columns" src="images/andrew1.jpg" alt="">
         <br>
         <p class="one-third column">
-            Hello my name is Andrew Hird, on this website you can find what I have learned at Enspiral Dec Academy so far. Feel free to click about and read some of my blog posts.
+            Hello my name is Andrew Hird, on this website you can find what I have learned at Enspiral Dev Academy so far. Feel free to click about and read some of my blog posts.
         </p>
     </div>
 
