--- a/blogs.html
+++ b/blogs.html
@@ -91,6 +91,11 @@
                         <h6>Cultural Blog</h6>Self Confidence</div>
                 </a>
 
+                <a class="box" href="blog/t6-js-language.html">
+                    <div class="blog-link-text">
+                        <h6>Technical Blog</h6>Javascript Language</div>
+                </a>
+
 
 
             </div>
