--- a/blogs.html
+++ b/blogs.html
@@ -96,6 +96,13 @@
                         <h6>Technical Blog</h6>Javascript Language</div>
                 </a>
 
+                <a class="box" href="blog/c6-control.html">
+                    <div class="blog-link-text">
+                        <h6>Cultural Blog</h6>Control</div>
+                </a>
+
+
+
 
 
             </div>
