--- a/blogs.html
+++ b/blogs.html
@@ -101,6 +101,11 @@
                         <h6>Cultural Blog</h6>Control</div>
                 </a>
 
+                <a class="box" href="blog/c7-motivation.html">
+                    <div class="blog-link-text">
+                        <h6>Cultural Blog</h6>Motivation</div>
+                </a>
+
 
 
 
