--- a/blogs.html
+++ b/blogs.html
@@ -106,9 +106,10 @@
                         <h6>Cultural Blog</h6>Motivation</div>
                 </a>
 
-
-
-
+                <a class="box" href="blog/t7-scope.html">
+                    <div class="blog-link-text">
+                        <h6>Technical Blog</h6>Scope</div>
+                </a>
 
             </div>
         </div>
