--- a/blogs.html
+++ b/blogs.html
@@ -111,6 +111,11 @@
                         <h6>Technical Blog</h6>Scope</div>
                 </a>
 
+                <a class="box" href="blog/c8-connecting.html">
+                    <div class="blog-link-text">
+                        <h6>Cultural Blog</h6>Connecting</div>
+                </a>
+
             </div>
         </div>
 
