--- a/blogs.html
+++ b/blogs.html
@@ -116,6 +116,11 @@
                         <h6>Cultural Blog</h6>Connecting</div>
                 </a>
 
+                <a class="box" href="blog/c9-leadership.html">
+                    <div class="blog-link-text">
+                        <h6>Cultural Blog</h6>Leadership</div>
+                </a>
+
             </div>
         </div>
 
